ci: validate schema (2020-12) + hashes on PR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '20' }
+        with:
+          node-version: 20
       - run: npm ci || npm i
-      - run: npm test
+      - run: sudo apt-get update && sudo apt-get install -y jq
+      - run: mkdir -p tmp
+      - run: curl -L -o tmp/schema.json https://raw.githubusercontent.com/ai-trust-layer/receipt-spec/v1.0.3/schema/receipt.schema.json
+      - run: curl -L -o tmp/ok.json https://raw.githubusercontent.com/ai-trust-layer/receipt-spec/v1.0.3/examples/ok.json
+      - run: echo "hello input" > tmp/in.txt
+      - run: echo "hello output" > tmp/out.txt
+      - run: IH=$(sha256sum tmp/in.txt | cut -d" " -f1) && OH=$(sha256sum tmp/out.txt | cut -d" " -f1) && jq --arg ih "$IH" --arg oh "$OH" '.input_hash=$ih | .output_hash=$oh' tmp/ok.json > tmp/ok-local.json
+      - run: node bin/receipt-verify verify tmp/ok-local.json --schema tmp/schema.json --input tmp/in.txt --output tmp/out.txt
