--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@noble/ed25519": "^2.3.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1"
   },
