--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "JS SDK for verifying AI receipts (offline; salted hashes support)",
   "main": "src/verify.js",
   "bin": {
-    "receipt-verify": "bin/receipt-verify"
+    "receipt-verify": "bin/receipt-verify.mjs"
   },
   "scripts": {
     "test": "node --test || echo \"(tests pending)\""
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@noble/ed25519": "^2.3.0",
+    "@noble/hashes": "^1.8.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1"
   },
